@@ -16,9 +16,12 @@
   *  <b>Changed:</b>
   *  - Slowed down bit-banged PDI programming in the AVRISP project slightly to prevent transmission errors
   *  - Renamed the AVRISP project folder to AVRISP-MKII to reduce confusion
+  *  - Renamed the RESET_LINE_* makefile tokens in the AVRISP MKII Project to AUX_LINE_*, as they are not always used for target
+  *    reset
   *
   *  <b>Fixed:</b>
   *  - Fixed AVRISP project not able to enter programming mode when ISP protocol is used
+  *  - Fixed AVRISP PDI race condition where the guard time between direction changes could be interpreted as a start bit
   *
   *  \section Sec_ChangeLog091223 Version 091223
   *
